--- a/styles/scss/estructura/_footer.scss
+++ b/styles/scss/estructura/_footer.scss
@@ -8,8 +8,8 @@ footer {
     justify-content: center;
     background-color: #000000;
     margin: 0vh;
-
-    ul {
+    ul {margin-top: 3%;
+        margin-bottom: 2%;
         padding-left: 0px;
 
         li {
