--- a/styles/scss/estructura/_nav.scss
+++ b/styles/scss/estructura/_nav.scss
@@ -8,7 +8,7 @@ nav {
     margin-bottom: 40px;
     top: 0;
     left: 0;
-    background-color: #000000;
+    background-color: #0000007e;
     opacity: 100%;
     ul {
         display: flex;
