--- a/styles/scss/pages/_productosyservicios.scss
+++ b/styles/scss/pages/_productosyservicios.scss
@@ -1,16 +1,77 @@
 
 /*imagenes*/
-.productos3d{
-     margin-top: 5%;
- img{
-    height: 30%;
-    width: 50%;
-border-radius: 20%;
-border-style: solid;   
-}}
+
 section{
     h2{
         margin-top: 3%;
         margin-bottom: 3%;
+    }
+}
+.productos3d {
+    .slider {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        ul {
+            display: flex;
+            animation: cambio 10s infinite alternate linear;
+            width: 400%;
+
+            @keyframes cambio {
+                0% {
+                    margin-left: 0;
+                }
+
+                20% {
+                    margin-left: 0;
+                }
+               
+
+                30% {
+                    margin-left: -100%;
+                }
+
+                45% {
+                    margin-left: -150%;
+                }
+
+                50% {
+                    margin-left: -200%;
+                }
+
+                70% {
+                    margin-left: -300%
+                }
+
+                75% {
+                    margin-left: -300%;
+                }
+
+                100% {
+                    margin-left: -300%;
+                }
+
+
+            }
+
+
+            li {
+                width: 100%;
+                height: 50%;
+                list-style: none;
+
+                img {
+                    width: 60%;
+                    height: 100vh;
+                    &:not(#dember){
+                        margin-left:25%;
+                    }
+                    &:not(#protesis){
+                        margin-right: 25%;
+                    }
+                }
+            }
+        }
     }
 }
