--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -13,5 +13,7 @@
 @import"./pages/sobrenosotros.scss";
 /*calidad*/
 @import"./pages/calidad";
+/*Contacto*/
+@import"./pages/contacto";
 /*responsive*/
 @import "./responsive/mediaquaries.scss";
