--- a/styles/scss/estructura/_nav.scss
+++ b/styles/scss/estructura/_nav.scss
@@ -10,6 +10,7 @@ nav {
     left: 0;
     background-color: #0000007e;
     opacity: 100%;
+ 
     ul {
         display: flex;
         flex-wrap: nowrap;
@@ -33,4 +34,10 @@ nav {
 .logo img {
     width: 100%;
     height: 8vh;
+}
+#menu{
+    display:none;
+}
+#menu-check{
+    display: none;
 }
