--- a/styles/scss/responsive/_mediaquaries.scss
+++ b/styles/scss/responsive/_mediaquaries.scss
@@ -253,15 +253,24 @@
         justify-content: center;
         margin-bottom: 5%;
 
+
         fieldset {
             margin-left: 0px;
             width: 30px;
             height: 50%;
-
+            display: flex;
+            flex-direction: column;
             input {
                 margin: 15px;
                 height: 20px;
             }
+            label{
+                font-size: 15px;
+            }
+            div{
+                font-size: 12px;
+                margin-top: 3%;
+                }
         }
     }
 
@@ -289,7 +298,7 @@
                 color: black;
                 padding: 0px;
                 height: 60vh;
-margin-left: 25%;
+                margin-left: 25%;
                 margin-bottom: 3%;
 
                 h3 {
@@ -320,8 +329,8 @@ margin-left: 25%;
         #video {
             margin-top: 40px;
             margin-bottom: 40px;
-            height: 155px;
-            width: 200px;
+            height: 200px;
+            width: 300px;
         }
     }
 
@@ -339,11 +348,12 @@ margin-left: 25%;
         align-content: center;
         border-color: black;
         border-style: groove;
- img {
-        height: 100px;
-        width: 200px;
-        border-radius: 0%;
-    }
+
+        img {
+            height: 100px;
+            width: 200px;
+            border-radius: 0%;
+        }
     }
 
     %imgfoda {
@@ -368,7 +378,7 @@ margin-left: 25%;
         grid-area: imgT;
     }
 
-   
+
 
     /*footer */
 
@@ -377,19 +387,22 @@ margin-left: 25%;
         background-color: #171718;
         width: auto;
         height: max-content;
-ul{margin-bottom: 0%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
 
-        li {
+        ul {
             margin-bottom: 0%;
-            border: none;
-            p {
-                font-size: 8px;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+
+            li {
+                margin-bottom: 0%;
+                border: none; 
+                  font-size: 12px;
+
+              
             }
-        }}
+        }
 
         .whastapp img {
             display: flex;
@@ -404,7 +417,7 @@ ul{margin-bottom: 0%;
 }
 
 /* MEDIA QUARIES GRID para mayor de 600px-tablet*/
-@media only screen and (min-width: 600px) {
+@media (min-width: 700px) and (orientation: landscape){
     .mediacontainer {
         display: grid;
         grid-template-columns: 2fr auto;
@@ -493,4 +506,12 @@ ul{margin-bottom: 0%;
             }
         }
     }
+footer{
+    height: max-content;
+}
+ul{
+    li{
+        margin-bottom: 0;
+    }
+}
 }
